--- a/index.html
+++ b/index.html
@@ -11,7 +11,16 @@
 <script src="common/rop.js"></script>
 <script src="common/syscalls.js"></script>
 <script src="common/syscalls2.js"></script>
-<table align="center" style="width:500px;margin-top:150px;">
+<marquee style="font-size:20px;color:red;margin-top:120px;">I had accidentally updated my PS4 to latest version and I am out of the JB scene right now, If you think my version of exploit is stable, please contribute to buy me a PS4 6.72 and help me get back to JB scene. Donate me at: https://paypal.me/darkmodder</marquee>
+<div><table style="padding-left:30px;float: left;">
+<tr>
+<td colspan="2" align="center"><h1 style="color:red">Contributors</h1></td>
+</tr>
+<tr style="font-size:20px;"><td>Dat Tien Nguyen</td>
+<td>$10</td></tr><tr style="font-size:20px;"><td>Vigneshh1</td>
+<td>$10</td></tr>
+</table>
+<table align="center" style="width:500px;margin-top:30px;padding-right:130px;">
 <tr>
 <td colspan="2" align="center"><h1>PS4 Jailbreak 6.72</h1></td>
 </tr>
@@ -52,6 +61,6 @@
 <td align="center" width="50%"><a href="#" onclick="load_payload('restore'); return false">Restore</a></td>
 <td align="center" width="50%"><a href="#" onclick="load_payload('rifrenamer'); return false">RIF Renamer</a></td>
 </tr>
-</table>
+</table></div>
 </body>
 </html>
