--- a/index.html
+++ b/index.html
@@ -1,8 +1,27 @@
-<html>
+<html manifest="offlineCache.manifest">
 <head>
 <title>PS4 Jailbreak 6.72</title>
 <meta charset="utf-8"/>
+<style>
+.button {
+  background-color: #003263;  
+  border-radius: 5px;
+  color: white;
+  padding: .5em;
+  text-decoration: none;
+  height:100%;
+  display:inline-table;
+}
+
+.button:focus,
+.button:hover {
+  background-color: #007bff;
+  color: White;
+}
+</style>
 <body>
+<script>window.applicationCache.ondownloading=function(){alert("Page Caching started !!")};window.applicationCache.onprogress=function(a){document.getElementById("progress").innerHTML="<h3 style='color:green'>Caching Status: "+(Math.round(100*(a.loaded/a.total)))+"% Completed</h3>"};window.applicationCache.oncached=function(){alert("Page Cached Successfully!!")};</script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 <script src="functions.js"></script>
 <script>function print(){}</script>
 <script src="common/exploit.js"></script>
@@ -11,55 +30,49 @@
 <script src="common/rop.js"></script>
 <script src="common/syscalls.js"></script>
 <script src="common/syscalls2.js"></script>
-<marquee style="font-size:20px;color:red;margin-top:120px;">I had accidentally updated my PS4 to latest version and I am out of the JB scene right now, If you think my version of exploit is stable, please contribute to buy me a PS4 6.72 and help me get back to JB scene. Donate me at: https://paypal.me/darkmodder</marquee>
-<div><table style="padding-left:30px;float: left;">
-<tr>
-<td colspan="2" align="center"><h1 style="color:red">Contributors</h1></td>
-</tr>
-<tr style="font-size:20px;"><td>Dat Tien Nguyen</td>
-<td>$10</td></tr><tr style="font-size:20px;"><td>Vigneshh1</td>
-<td>$10</td></tr>
-</table>
-<table align="center" style="width:500px;margin-top:30px;padding-right:130px;">
+<marquee style="font-size:20px;color:red;margin-top:120px;">OFFLINE EXPLOIT Released, the scripts & payloads gets automatically cached when you stay on this page !!</marquee>
+<div id="progress"></div>
+<div>
+<table align="center" style="width:600px;margin-top:30px;padding-right:130px;">
 <tr>
 <td colspan="2" align="center"><h1>PS4 Jailbreak 6.72</h1></td>
 </tr>
 <tr>
-<td align="center" colspan="2"><a href="#" onclick="load_mira(); return false">MIRA + HEN</a>
-<a href="#" onclick="load_mira_nohb(); return false" style="padding-left:50px;padding-right:50px">MIRA No HB</a>
-<a href="#" onclick="load_netcat(); return false">Bin Loader</a></td>
+<td align="center" colspan="2"><a href="#" class="button" onclick="load_mira(); return false" style="width:28%">MIRA + HEN</a>
+<a href="#" class="button" onclick="load_mira_nohb(); return false" style="width:28%">MIRA No HB</a>
+<a href="#" class="button" onclick="load_netcat(); return false"style="width:28%">Bin Loader</a></td>
 </tr>
 <tr><td><br/></td></tr>
 <tr>
 <td colspan="2" align="center"><h1>Payloads</h1></td>
 </tr>
 <tr>
-<td align="center" width="50%"><a href="#" onclick="load_payload('app2usb'); return false">App2USB</a></td>
-<td align="center" width="50%"><a href="#" onclick="load_payload('backup'); return false">BackUp</a></td>
+<td align="center" colspan="2"><a href="#" class="button" onclick="load_payload('app2usb'); return false" style="width:43%">App2USB</a>
+<a href="#" class="button" onclick="load_payload('backup'); return false" style="width:43%">BackUp</a></td>
 </tr><tr><td><br/></td></tr>
 <tr>
-<td align="center" width="50%"><a href="#" onclick="load_payload('disableupdates'); return false">Disable Updates</a></td>
-<td align="center" width="50%"><a href="#" onclick="load_payload('enableupdates'); return false">Enable Updates</a></td>
+<td align="center" colspan="2"><a href="#" class="button" onclick="load_payload('disableupdates'); return false" style="width:43%">Disable Updates</a>
+<a href="#" class="button" onclick="load_payload('enableupdates'); return false" style="width:43%">Enable Updates</a></td>
 </tr><tr><td><br/></td></tr>
 <tr>
-<td align="center" width="50%"><a href="#" onclick="load_payload('dumper'); return false">Dumper</a></td>
-<td align="center" width="50%"><a href="#" onclick="load_payload('kerneldumper'); return false">Kernel Dumper</a></td>
+<td align="center" colspan="2"><a href="#" class="button" onclick="load_payload('dumper'); return false" style="width:43%">Dumper</a>
+<a href="#" class="button" onclick="load_payload('kerneldumper'); return false" style="width:43%">Kernel Dumper</a></td>
 </tr><tr><td><br/></td></tr>
 <tr>
-<td align="center" width="50%"><a href="#" onclick="load_payload('enablebrowser'); return false">Enable Browser</a></td>
-<td align="center" width="50%"><a href="#" onclick="load_payload('fanthreshold'); return false">Fan Threshold</a></td>
+<td align="center" colspan="2"><a href="#" class="button" onclick="load_payload('enablebrowser'); return false" style="width:43%">Enable Browser</a>
+<a href="#" class="button" onclick="load_payload('fanthreshold'); return false" style="width:43%">Fan Threshold</a></td>
 </tr><tr><td><br/></td></tr>
 <tr>
-<td align="center" width="50%"><a href="#" onclick="load_payload('ftp'); return false">FTP</a></td>
-<td align="center" width="50%"><a href="#" onclick="load_payload('historyblocker'); return false">History Blocker</a></td>
+<td align="center" colspan="2"><a href="#" class="button" onclick="load_payload('ftp'); return false" style="width:43%">FTP</a>
+<a href="#" class="button" onclick="load_payload('historyblocker'); return false" style="width:43%">History Blocker</a></td>
 </tr><tr><td><br/></td></tr>
 <tr>
-<td align="center" width="50%"><a href="#" onclick="load_payload('kernelclock'); return false">Kernel Clock</a></td>
-<td align="center" width="50%"><a href="#" onclick="load_payload('linuxloader'); return false">Linux Loader</a></td>
+<td align="center" colspan="2"><a href="#" class="button" onclick="load_payload('kernelclock'); return false" style="width:43%">Kernel Clock</a>
+<a href="#" class="button" onclick="load_payload('linuxloader'); return false" style="width:43%">Linux Loader</a></td>
 </tr><tr><td><br/></td></tr>
 <tr>
-<td align="center" width="50%"><a href="#" onclick="load_payload('restore'); return false">Restore</a></td>
-<td align="center" width="50%"><a href="#" onclick="load_payload('rifrenamer'); return false">RIF Renamer</a></td>
+<td align="center" colspan="2"><a href="#" class="button" onclick="load_payload('restore'); return false" style="width:43%">Restore</a>
+<a href="#" class="button" onclick="load_payload('rifrenamer'); return false" style="width:43%">RIF Renamer</a></td>
 </tr>
 </table></div>
 </body>
