--- a/index.html
+++ b/index.html
@@ -21,7 +21,6 @@
 </style>
 <body>
 <script>window.applicationCache.ondownloading=function(){alert("Page Caching started !!")};window.applicationCache.onprogress=function(a){document.getElementById("progress").innerHTML="<h3 style='color:green'>Caching Status: "+(Math.round(100*(a.loaded/a.total)))+"% Completed</h3>"};window.applicationCache.oncached=function(){alert("Page Cached Successfully!!")};</script>
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 <script src="functions.js"></script>
 <script>function print(){}</script>
 <script src="common/exploit.js"></script>
@@ -30,16 +29,16 @@
 <script src="common/rop.js"></script>
 <script src="common/syscalls.js"></script>
 <script src="common/syscalls2.js"></script>
-<marquee style="font-size:20px;color:red;margin-top:120px;">OFFLINE EXPLOIT Released, the scripts & payloads gets automatically cached when you stay on this page !!</marquee>
+<marquee style="font-size:20px;color:red;margin-top:120px;">Thanks a lot @blimblim04 of PSXHAX for buying me a PS4!! OFFLINE EXPLOIT Released !!</marquee>
 <div id="progress"></div>
 <div>
-<table align="center" style="width:600px;margin-top:30px;padding-right:130px;">
+<table align="center" style="width:600px;margin-top:30px;">
 <tr>
 <td colspan="2" align="center"><h1>PS4 Jailbreak 6.72</h1></td>
 </tr>
 <tr>
-<td align="center" colspan="2"><a href="#" class="button" onclick="load_mira(); return false" style="width:28%">MIRA + HEN</a>
-<a href="#" class="button" onclick="load_mira_nohb(); return false" style="width:28%">MIRA No HB</a>
+<td align="center" colspan="2"><a href="#" class="button" onclick="load_payload('mirahen'); return false" style="width:28%">MIRA + HEN</a>
+<a href="#" class="button" onclick="load_payload('miranohb'); return false" style="width:28%">MIRA No HB</a>
 <a href="#" class="button" onclick="load_netcat(); return false"style="width:28%">Bin Loader</a></td>
 </tr>
 <tr><td><br/></td></tr>
@@ -59,20 +58,13 @@
 <a href="#" class="button" onclick="load_payload('kerneldumper'); return false" style="width:43%">Kernel Dumper</a></td>
 </tr><tr><td><br/></td></tr>
 <tr>
-<td align="center" colspan="2"><a href="#" class="button" onclick="load_payload('enablebrowser'); return false" style="width:43%">Enable Browser</a>
-<a href="#" class="button" onclick="load_payload('fanthreshold'); return false" style="width:43%">Fan Threshold</a></td>
-</tr><tr><td><br/></td></tr>
 <tr>
-<td align="center" colspan="2"><a href="#" class="button" onclick="load_payload('ftp'); return false" style="width:43%">FTP</a>
+<td align="center" colspan="2"><a href="#" class="button" onclick="load_payload('restore'); return false" style="width:43%">Restore</a>
 <a href="#" class="button" onclick="load_payload('historyblocker'); return false" style="width:43%">History Blocker</a></td>
 </tr><tr><td><br/></td></tr>
 <tr>
-<td align="center" colspan="2"><a href="#" class="button" onclick="load_payload('kernelclock'); return false" style="width:43%">Kernel Clock</a>
-<a href="#" class="button" onclick="load_payload('linuxloader'); return false" style="width:43%">Linux Loader</a></td>
-</tr><tr><td><br/></td></tr>
-<tr>
-<td align="center" colspan="2"><a href="#" class="button" onclick="load_payload('restore'); return false" style="width:43%">Restore</a>
-<a href="#" class="button" onclick="load_payload('rifrenamer'); return false" style="width:43%">RIF Renamer</a></td>
+<td align="center" colspan="2"><a href="#" class="button" onclick="load_payload('ftp'); return false" style="width:90%">FTP</a>
+</td>
 </tr>
 </table></div>
 </body>
