--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 <script src="common/rop.js"></script>
 <script src="common/syscalls.js"></script>
 <script src="common/syscalls2.js"></script>
-<marquee style="font-size:20px;color:red;margin-top:120px;">Thanks a lot @blimblim04 of PSXHAX for buying me a PS4!! OFFLINE EXPLOIT Released !!</marquee>
+<marquee style="font-size:20px;color:red;margin-top:70px;"></marquee>
 <div id="progress"></div>
 <div>
 <table align="center" style="width:600px;margin-top:30px;">
@@ -39,7 +39,7 @@
 <tr>
 <td align="center" colspan="2"><a href="#" class="button" onclick="load_payload('mirahen'); return false" style="width:28%">MIRA + HEN</a>
 <a href="#" class="button" onclick="load_payload('miranohb'); return false" style="width:28%">MIRA No HB</a>
-<a href="#" class="button" onclick="load_netcat(); return false"style="width:28%">Bin Loader</a></td>
+<a href="#" class="button" onclick="load_payload('miraunofficial'); return false" style="width:28%">MIRA UnOfficial</a></td>
 </tr>
 <tr><td><br/></td></tr>
 <tr>
@@ -47,7 +47,7 @@
 </tr>
 <tr>
 <td align="center" colspan="2"><a href="#" class="button" onclick="load_payload('app2usb'); return false" style="width:43%">App2USB</a>
-<a href="#" class="button" onclick="load_payload('backup'); return false" style="width:43%">BackUp</a></td>
+<a href="#" class="button" onclick="load_netcat(); return false" style="width:43%">Bin Loader</a></td>
 </tr><tr><td><br/></td></tr>
 <tr>
 <td align="center" colspan="2"><a href="#" class="button" onclick="load_payload('disableupdates'); return false" style="width:43%">Disable Updates</a>
@@ -63,8 +63,8 @@
 <a href="#" class="button" onclick="load_payload('historyblocker'); return false" style="width:43%">History Blocker</a></td>
 </tr><tr><td><br/></td></tr>
 <tr>
-<td align="center" colspan="2"><a href="#" class="button" onclick="load_payload('ftp'); return false" style="width:90%">FTP</a>
-</td>
+<td align="center" colspan="2"><a href="#" class="button" onclick="load_payload('ftp'); return false" style="width:43%">FTP</a>
+<a href="#" class="button" onclick="load_payload('backup'); return false" style="width:43%">BackUp</a></td>
 </tr>
 </table></div>
 </body>
