--- a/index.html
+++ b/index.html
@@ -23,12 +23,14 @@
 <script>
   window.applicationCache.ondownloading=function(){document.getElementById("progress").innerHTML="Page Caching Started!!"};
   window.applicationCache.onprogress=function(a){document.getElementById("progress").innerHTML="Caching Status: "+(Math.round(100*(a.loaded/a.total)))+"% Completed"};
-  window.applicationCache.oncached=function(){document.getElementById("progress").innerHTML="Page Cached Successfully!!";setTimeout(function(){document.getElementById("progress").innerHTML="PS4 Jailbreak 6.72"; }, 4000);};
+  window.applicationCache.oncached=function(){document.getElementById("progress").innerHTML="Page Cached Successfully!!";setTimeout(function(){document.getElementById("progress").innerHTML="Turn Off the Internet & Reopen the Page to Run the Exploit!!"; }, 1500);};
+  window.applicationCache.onnoupdate=function(){setTimeout(function(){load_JB(); }, 500);};
+  window.applicationCache.onerror=function(){setTimeout(function(){load_JB(); }, 500);};
 </script>
 <script src="common/functions.js"></script>
 <script>function print(){}</script>
 <script src="common/exploit.js"></script>
-<h1 id="progress" style="margin-top:30px;text-align:center;">PS4 Jailbreak 6.72 Exploit Complete ✔</h1><hr>
+<h1 id="progress" style="margin-top:30px;text-align:center;">PS4 Jailbreak 6.72</h1><hr>
 <div>
 <table align="center" style="width:600px;margin-top:30px;">
 <tr>
@@ -60,6 +62,9 @@
 <tr>
 <td align="center" colspan="2"><a href="#" class="button" onclick="load_payload('ftp'); return false" style="width:43%">FTP</a>
 <a href="#" class="button" onclick="load_payload('backup'); return false" style="width:43%">BackUp</a></td>
+</tr><tr><td><br/></td></tr>
+<tr>
+<td align="center" colspan="2"><a href="#" class="button" onclick="load_payload('linuxloader'); return false" style="width:90%">Linux Loader</a></td>
 </tr>
 </table></div>
 </body>
