--- a/index.html
+++ b/index.html
@@ -39,18 +39,11 @@
         </div>
         <div id="content">
             <div id="nav">
-                <h3> 5.05 Exploit Menu </h3>
+                <h3> Contact </h3>
                 <hr>
                 <ul>
-                    <li><a class="selected" href="http://ps4adminv5.retrogamer.tech/"> PS4 Admin Menu </a></li><br>
-                    <li><a class="selected" href="https://ps4gentoo.github.io/about/"> PS4 Gentoo Guide </a></li><br>
-                    <li><a class="selected" href="https://ps4gentoo.github.io/"> PS4 Gentoo Menu </a></li><br>
-                    <li><a class="selected" href="https://www.savewizard.net/"> PS4 Save Wizard </a></li><br>
-                    <li><a class="selected" href="http://ps4trainer.com/"> PS4 Trainer Menu </a></li><br>
-                    <li><a class="selected" href="https://ithaqua.exploit.menu/"> Al Azif Menu </a></li><br>
-                    <li><a class="selected" href="https://www.consolehax.com/PS4/leeful/"> Leeful's Menu </a></li><br>
-                    <li><a class="selected" href="https://www.consolehax.com/PS4/psphwoar/files/exploit/host/menu/index.html"> PS-Phwoar! Menu </a></li><br>
-                    <li><a class="selected" href="https://www.consolehax.com/PS4/xproject/index.html"> X-Project Menu </a></li>
+                    <li><a class="selected" href="https://www.facebook.com/ajgames.services"> Fanpage Nha AJ </a></li><br>
+                    <li><a class="selected" href="https://ajhousegames.wordpress.com/"> Gameplay & Screenshot </a></li><br>
                 </ul>
                 <hr>
                 <img height="128" width="128" src="logo.png">
@@ -105,10 +98,7 @@
                     <h2 id='msgs'>&laquo;&nbsp; PlayStation 4 Exploit Host Menu for 6.72 FW &nbsp;&raquo;</h2>
                 </div>
             </div>
-            <div id="footer">
-                &copy;2020&nbsp;Created by:<a class="selected" href="https://www.youtube.com/channel/UCdf5cXsxSUTrwxsiNeXl_NQ?view_as=subscriber">&nbsp;xforce505</a> Credits: Leeful74, sleirsgoevy, theflow0, AlAzif, qwertyoruiopz, flatz, Specter, xVortex,
-                Stooged, OpenOrbis, 5u770n, KiiWii, SiSTRo, Zecoxao, LightningMods, RetroGamer74, CelesteBlue, c0d3m4st4, and many more!!
-            </div>
+            
         </div>
         <script>
             function load_exploit() {
