--- a/index.html
+++ b/index.html
@@ -2,22 +2,22 @@
 <html manifest="cache.manifest" lang="en">
 
 <head>
-    <title> Exploit Host Menu 1.0 </title>
+    <title> Exploit Host Menu 6.72 Nha AJ </title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" type="text/css" href="style.css" />
     <link rel="shortcut icon" href="favicon.ico"></link>
     <script>
         function DLProgress(e) {
             Percent = (Math.round(e.loaded / e.total * 100));
-            window.msgs.innerHTML = "&laquo;&nbsp; Installing Offline Cache: " + Percent + "% &nbsp;&raquo;";
+            window.msgs.innerHTML = "&laquo;&nbsp; Dang cai dat Cache Offline: " + Percent + "% &nbsp;&raquo;";
         }
 
         function DisplayCacheProgress() {
             setTimeout(function() {
-                window.msgs.innerHTML = "&laquo;&nbsp; Offline Cache Installed Successfully &nbsp;&raquo;";
+                window.msgs.innerHTML = "&laquo;&nbsp; Cache Offline cai dat thanh cong &nbsp;&raquo;";
             }, 1000);
             setTimeout(function() {
-                window.msgs.innerHTML = "&laquo;&nbsp; Please Close And Re-Open Your Browser &nbsp;&raquo;";
+                window.msgs.innerHTML = "&laquo;&nbsp; Dong cua so duyet web va mo lai &nbsp;&raquo;";
             }, 3000);
         }
         window.applicationCache.addEventListener("progress", DLProgress, false);
@@ -35,7 +35,7 @@
 <body>
     <div id="container">
         <div id="header">
-            <h1> PlayStation 4 Exploit Host Menu </h1>
+            <h1> Nha AJ - Cai dat, sua chua phan cung phan mem PS3, PS4, PS... </h1>
         </div>
         <div id="content">
             <div id="nav">
@@ -43,7 +43,7 @@
                 <hr>
                 <ul>
                     <li><a class="selected" href="https://www.facebook.com/ajgames.services"> Fanpage Nha AJ </a></li><br>
-                    <li><a class="selected" href="https://ajhousegames.wordpress.com/"> Gameplay & Screenshot </a></li><br>
+                    <li><a class="selected" href="https://ajhousegames.wordpress.com/"> Danh sach Game PS3, PS4 </a></li><br>
                 </ul>
                 <hr>
                 <img height="128" width="128" src="logo.png">
@@ -54,13 +54,10 @@
                     <h1> 6.72 Exploit Menu </h1>
                     <br>
                     <hr>
-                    <button class="btn btn1" onclick="load_exploit(); return false"> JB </button>
+                    <button class="btn btn1" onclick="load_exploit(); return false"> Jailbreak 6.72 </button>
                     <button class="btn btn1" onclick="load_HEN(); return false"> HEN </button>
-                    <button class="btn btn1" onclick="load_exploit_HEN(); return false"> JB + HEN </button>
-                    <button class="btn btn1" onclick="load_mira(); return false"> Mira </button>
-                    <button class="btn btn1" onclick="load_exploit_mira(); return false"> JB + Mira </button>
-                    <button class="btn btn1" onclick="load_mira_unofficial(); return false"> Mira (Unofficial) </button>
-                    <button class="btn btn1" onclick="load_exploit_miraUnoff(); return false"> JB + Mira (Unofficial) </button>
+                    <button class="btn btn1" onclick="load_exploit_HEN(); return false"> Jailbreak 6.72 + HEN </button>
+                    <br><br>
                     <button class="btn btn1" onclick="load_app2usb(); return false"> App2USB </button>
                     <button class="btn btn1" onclick="load_dbBackup(); return false"> DB Backup </button>
                     <button class="btn btn1" onclick="load_dbRestore(); return false"> DB Restore </button>
@@ -79,7 +76,7 @@
                     <button class="btn btn1" onclick="load_todev(); return false"> ToDEV </button>
                     <button class="btn btn1" onclick="load_todex(); return false"> ToDEX </button>
                     <button class="btn btn1" onclick="load_ps4debug(); return false"> PS4 Debug </button>
-                    <br>
+                    <br><br>
                     <button class="btn btn1" onclick="load_fanthresh(); return false"> Set Fan Threshold </button>&nbsp;<select style="background-color:black;height:26px;width:47px;border-color:#151515;color:white;" id="tempC"></select>
                     
                     <br><br>
@@ -95,19 +92,19 @@
                         tempC.value = 60;
                     </script>
                     <br>
-                    <h2 id='msgs'>&laquo;&nbsp; PlayStation 4 Exploit Host Menu for 6.72 FW &nbsp;&raquo;</h2>
+                    <h2 id='msgs'>&laquo;&nbsp; Nha AJ - Cai dat, sua chua phan cung phan mem PS3, PS4, PS... &nbsp;&raquo;</h2>
                 </div>
             </div>
             
         </div>
         <script>
             function load_exploit() {
-                msgs.innerHTML = "<h1 style='font-size:25px;text-align:center;'>Loading JB ....</h1>";
+                msgs.innerHTML = "<h1 style='font-size:25px;text-align:center;'>Loading Jailbreak...</h1>";
                 setTimeout(jailbreak, 500);
             }
 
             function load_exploit_mira() {
-                msgs.innerHTML = "<h1 style='font-size:25px;text-align:center;'>Loading JB + Mira ....</h1>";
+                msgs.innerHTML = "<h1 style='font-size:25px;text-align:center;'>Loading JB + Mira...</h1>";
                 LoadedMSG = "JB + Mira Loaded ✔";
                 ExploitMira = "yes";
                 MiraSRC = "pl_mira.js";
@@ -115,7 +112,7 @@
             }
 
             function load_exploit_miraUnoff() {
-                msgs.innerHTML = "<h1 style='font-size:25px;text-align:center;'>Loading JB + Mira (Unofficial) ....</h1>";
+                msgs.innerHTML = "<h1 style='font-size:25px;text-align:center;'>Loading JB + Mira (Unofficial)...</h1>";
                 LoadedMSG = "JB + Mira Loaded ✔";
                 ExploitMira = "yes";
                 MiraSRC = "pl_mira_unofficial.js";
@@ -123,7 +120,7 @@
             }
 
             function load_exploit_HEN() {
-                msgs.innerHTML = "<h1 style='font-size:25px;text-align:center;'>Loading JB + HEN ....</h1>";
+                msgs.innerHTML = "<h1 style='font-size:25px;text-align:center;'>Loading Jailbreak + HEN...</h1>";
                 LoadedMSG = "JB + HEN Loaded ✔";
                 ExploitMira = "HEN";
                 MiraSRC = "pl_HEN.js";
@@ -131,7 +128,7 @@
             }
 
             function load_binloader() {
-                msgs.innerHTML = "<h1 style='font-size:25px;text-align:center;'>Loading Bin Loader ....</h1>";
+                msgs.innerHTML = "<h1 style='font-size:25px;text-align:center;'>Loading Bin Loader...</h1>";
                 LoadedMSG = "Send Payload To Port 9021";
                 var script = document.createElement('script');
                 script.src = "exp_loader.js";
@@ -139,7 +136,7 @@
             }
 
             function load_HEN() {
-                msgs.innerHTML = "<h1 style='font-size:25px;text-align:center;'>Loading HEN ....</h1>";
+                msgs.innerHTML = "<h1 style='font-size:25px;text-align:center;'>Loading HEN...</h1>";
                 LoadedMSG = "HEN Loaded ✔";
                 var script = document.createElement('script');
                 script.src = "pl_HEN.js";
@@ -150,7 +147,7 @@
             }
 
             function load_mira() {
-                msgs.innerHTML = "<h1 style='font-size:25px;text-align:center;'>Loading Mira ....</h1>";
+                msgs.innerHTML = "<h1 style='font-size:25px;text-align:center;'>Loading Mira...</h1>";
                 LoadedMSG = "Mira Loaded ✔";
                 var script = document.createElement('script');
                 script.src = "pl_mira.js";
@@ -161,7 +158,7 @@
             }
 
             function load_mira_unofficial() {
-                msgs.innerHTML = "<h1 style='font-size:25px;text-align:center;'>Loading Mira ....</h1>";
+                msgs.innerHTML = "<h1 style='font-size:25px;text-align:center;'>Loading Mira...</h1>";
                 LoadedMSG = "Mira Loaded ✔";
                 var script = document.createElement('script');
                 script.src = "pl_mira_unofficial.js";
@@ -172,7 +169,7 @@
             }
 
             function load_ftp() {
-                msgs.innerHTML = "<h1 style='font-size:25px;text-align:center;'>Loading FTP ....</h1>";
+                msgs.innerHTML = "<h1 style='font-size:25px;text-align:center;'>Loading FTP...</h1>";
                 LoadedMSG = "FTP Loaded ✔";
                 var script = document.createElement('script');
                 script.src = "pl_ftp.js";
@@ -183,7 +180,7 @@
             }
 
             function load_dumper() {
-                msgs.innerHTML = "<h1 style='font-size:25px;text-align:center;'>Loading Dumper ....</h1>";
+                msgs.innerHTML = "<h1 style='font-size:25px;text-align:center;'>Loading Dumper...</h1>";
                 LoadedMSG = "Dumper Loaded ✔";
                 var script = document.createElement('script');
                 script.src = "pl_dumper.js";
@@ -194,7 +191,7 @@
             }
 
             function load_linux() {
-                msgs.innerHTML = "<h1 style='font-size:25px;text-align:center;'>Loading Linux ....</h1>";
+                msgs.innerHTML = "<h1 style='font-size:25px;text-align:center;'>Loading Linux...</h1>";
                 LoadedMSG = "Linux Loaded ✔";
                 var script = document.createElement('script');
                 script.src = "pl_linux.js";
@@ -205,7 +202,7 @@
             }
 
             function load_app2usb() {
-                msgs.innerHTML = "<h1 style='font-size:25px;text-align:center;'>Loading AppToUSB ....</h1>";
+                msgs.innerHTML = "<h1 style='font-size:25px;text-align:center;'>Loading AppToUSB...</h1>";
                 LoadedMSG = "AppToUSB Loaded ✔";
                 var script = document.createElement('script');
                 script.src = "pl_app2usb.js";
@@ -216,7 +213,7 @@
             }
 
             function load_kerneldump() {
-                msgs.innerHTML = "<h1 style='font-size:25px;text-align:center;'>Loading Kernel Dumper ....</h1>";
+                msgs.innerHTML = "<h1 style='font-size:25px;text-align:center;'>Loading Kernel Dumper...</h1>";
                 LoadedMSG = "Kernel Dumper Loaded ✔";
                 var script = document.createElement('script');
                 script.src = "pl_kernelDumper.js";
@@ -227,7 +224,7 @@
             }
 
             function load_webrte() {
-                msgs.innerHTML = "<h1 style='font-size:25px;text-align:center;'>Loading WebRTE ....</h1>";
+                msgs.innerHTML = "<h1 style='font-size:25px;text-align:center;'>Loading WebRTE...</h1>";
                 LoadedMSG = "WebRTE Loaded ✔";
                 var script = document.createElement('script');
                 script.src = "pl_WebRTE.js";
@@ -238,7 +235,7 @@
             }
 
             function load_ps4debug() {
-                msgs.innerHTML = "<h1 style='font-size:25px;text-align:center;'>Loading PS4Debug ....</h1>";
+                msgs.innerHTML = "<h1 style='font-size:25px;text-align:center;'>Loading PS4Debug...</h1>";
                 LoadedMSG = "PS4Debug Loaded ✔";
                 var script = document.createElement('script');
                 script.src = "pl_ps4debug.js";
@@ -249,7 +246,7 @@
             }
 
             function load_todev() {
-                msgs.innerHTML = "<h1 style='font-size:25px;text-align:center;'>Loading ToDEV ....</h1>";
+                msgs.innerHTML = "<h1 style='font-size:25px;text-align:center;'>Loading ToDEV...</h1>";
                 LoadedMSG = "ToDEV Loaded ✔";
                 var script = document.createElement('script');
                 script.src = "pl_ToDEV.js";
@@ -260,7 +257,7 @@
             }
 
             function load_tokratos() {
-                msgs.innerHTML = "<h1 style='font-size:25px;text-align:center;'>Loading ToKratos ....</h1>";
+                msgs.innerHTML = "<h1 style='font-size:25px;text-align:center;'>Loading ToKratos...</h1>";
                 LoadedMSG = "ToKratos Loaded ✔";
                 var script = document.createElement('script');
                 script.src = "pl_ToKratos.js";
@@ -271,7 +268,7 @@
             }
 
             function load_todex() {
-                msgs.innerHTML = "<h1 style='font-size:25px;text-align:center;'>Loading ToDEX ....</h1>";
+                msgs.innerHTML = "<h1 style='font-size:25px;text-align:center;'>Loading ToDEX...</h1>";
                 LoadedMSG = "ToDEX Loaded ✔";
                 var script = document.createElement('script');
                 script.src = "pl_ToDEX.js";
@@ -282,7 +279,7 @@
             }
 
             function load_historyblock() {
-                msgs.innerHTML = "<h1 style='font-size:25px;text-align:center;'>Loading History Blocker ....</h1>";
+                msgs.innerHTML = "<h1 style='font-size:25px;text-align:center;'>Loading History Blocker...</h1>";
                 LoadedMSG = "History Blocker Loaded ✔";
                 var script = document.createElement('script');
                 script.src = "pl_historyBlocker.js";
@@ -293,7 +290,7 @@
             }
 
             function load_updatesdisable() {
-                msgs.innerHTML = "<h1 style='font-size:25px;text-align:center;'>Loading Disable Updates ....</h1>";
+                msgs.innerHTML = "<h1 style='font-size:25px;text-align:center;'>Loading Disable Updates...</h1>";
                 LoadedMSG = "Disable Updates Loaded ✔";
                 var script = document.createElement('script');
                 script.src = "pl_updatesDisable.js";
@@ -304,7 +301,7 @@
             }
 
             function load_updatesenable() {
-                msgs.innerHTML = "<h1 style='font-size:25px;text-align:center;'>Loading Enable Updates ....</h1>";
+                msgs.innerHTML = "<h1 style='font-size:25px;text-align:center;'>Loading Enable Updates...</h1>";
                 LoadedMSG = "Enable Updates Loaded ✔";
                 var script = document.createElement('script');
                 script.src = "pl_updatesEnable.js";
@@ -315,7 +312,7 @@
             }
 
             function load_dbBackup() {
-                msgs.innerHTML = "<h1 style='font-size:25px;text-align:center;'>Loading DB Backup ....</h1>";
+                msgs.innerHTML = "<h1 style='font-size:25px;text-align:center;'>Loading DB Backup...</h1>";
                 LoadedMSG = "DB Backup Loaded ✔";
                 var script = document.createElement('script');
                 script.src = "pl_dbBackup.js";
@@ -326,7 +323,7 @@
             }
 
             function load_dbRestore() {
-                msgs.innerHTML = "<h1 style='font-size:25px;text-align:center;'>Loading DB Restore ....</h1>";
+                msgs.innerHTML = "<h1 style='font-size:25px;text-align:center;'>Loading DB Restore...</h1>";
                 LoadedMSG = "DB Restore Loaded ✔";
                 var script = document.createElement('script');
                 script.src = "pl_dbRestore.js";
@@ -337,7 +334,7 @@
             }
 
             function load_eapkey() {
-                msgs.innerHTML = "<h1 style='font-size:25px;text-align:center;'>Loading EAP Dumper ....</h1>";
+                msgs.innerHTML = "<h1 style='font-size:25px;text-align:center;'>Loading EAP Dumper...</h1>";
                 LoadedMSG = "EAP Dumper Loaded ✔";
                 var script = document.createElement('script');
                 script.src = "pl_eapkey.js";
@@ -348,7 +345,7 @@
             }
 
             function load_fanthresh() {
-                msgs.innerHTML = "<h1 style='font-size:25px;text-align:center;'>Loading PS4 Fan Threshold ....</h1>";
+                msgs.innerHTML = "<h1 style='font-size:25px;text-align:center;'>Loading PS4 Fan Threshold...</h1>";
                 LoadedMSG = "PS4 Fan Threshold Loaded ✔";
                 fanTemp = tempC.value; //alert(fanTemp);
                 var script = document.createElement('script');
